--- a/css/style.css
+++ b/css/style.css
@@ -1,202 +1,215 @@
+/*
+* Todas as telas
+*/
 *{
-  margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  text-decoration: none;
-  font-family: sans-serif;
+  margin: 0;
+  text-decoration: none;  
+  text-transform: uppercase;
 }
-header, main section {
+#sobre {
+  background-color: #6e7686;
   height: 100vh;
 }
-#sobre, #sobre > * > * {
-  background-color: #6e7686;
-  text-align: center;
-  color: #fff;
-  text-decoration: none;
+
+#projetos {  
+  background-color: #ffffff;
 }
-#projetos {
+
+#contatos {
   background-color: #474e5d;
-  font-family: Helvetica, sans-serif;
-  height: auto;
-}
-section h2{
-  text-align: center;
-  color: #3D8BCD;
-  background-color: #fff;
-}
-picture img {
-  width: 450px;
-
-}
-/* MENU */
-ul{
-  list-style-type: none;
-  overflow: hidden;
-  background-color: #333;
-}
-li{
-  float: left;
-}
-li a{
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-li a:hover:not(.destaque) {
-  background-color: #111;
-}
-.destaque {
-  background-color: #3D8BCD;
+  height: 100vh;
 }
 
-/*SECTION TITULO PRINCIPAL*/
-#SectionTituloPrincipal {
-  height: 100%;
-  whidth: 100%;
+footer {
+  background-color: #000000;
+  color: #ffffff;
+  height: 10vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+footer a {
+  color: #ffffff
+}
+
+/*
+* versão desktop
+*/
+body {
+  font-family: 'PT Sans Narrow', sans-serif;
+  background-color: #eee;  
+}
+
+body header {
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  text-align: center;  
 }
-#SectionTituloPrincipal p {
-  margin: 10px 0 ;
+
+header nav {
+  height: 40px;
+  width: 100%;
+  background-color: #333;
+  color: #eee;
 }
-button.destaque{
-  border: none;
-  border-radius: 10px;
-  color: white;
+
+nav ul li {
+  display: inline;
+  float: left;
+}
+
+nav a {
+  display: inline-block;
+  width: 100px;
   text-align: center;
-  padding: 14px 16px;
+  text-decoration: none;
+  padding: 10px 0;
+  color: #eee;
   text-decoration: none;
 }
-button:hover {
-  background-color: #5D8BCD;
+
+nav li:hover {
+  background-color: #444;
 }
 
-
-/* The actual timeline (the vertical ruler) */
-.timeline {
-    position: relative;
-    max-width: 1200px;
-    margin: 0 auto;
+nav a#openup {
+  display: none;
 }
 
-/* The actual timeline (the vertical ruler) */
-.timeline::after {
-    content: '';
-    position: absolute;
-    width: 6px;
-    background-color: white;
-    top: 0;
-    bottom: 0;
-    left: 50%;
-    margin-left: -3px;
+header div {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
 }
 
-/* Container around content */
-.container {
-    padding: 10px 40px;
-    position: relative;
-    background-color: inherit;
-    width: 50%;
+header div h1 {  
+  font-size: 2.5em;
+  padding: .5ch
 }
 
-/* The circles on the timeline */
-.container::after {
-    content: '';
-    position: absolute;
-    width: 25px;
-    height: 25px;
-    right: -17px;
-    background-color: white;
-    border: 4px solid #3D8BCD;
-    top: 15px;
-    border-radius: 50%;
-    z-index: 1;
+header div p {
+  margin-bottom: 1ch;  
 }
 
-/* Place the container to the left */
-.left {
-    left: 0;
+header div button {
+  padding: 1ch;
 }
 
-/* Place the container to the right */
-.right {
-    left: 50%;
+#projetos{
+  display: flex;
+  flex-direction: column;
+  padding: 5ch 0;  
 }
 
-/* Add arrows to the left container (pointing right) */
-.left::before {
-    content: " ";
-    height: 0;
-    position: absolute;
-    top: 22px;
-    width: 0;
-    z-index: 1;
-    right: 30px;
-    border: medium solid white;
-    border-width: 10px 0 10px 10px;
-    border-color: transparent transparent transparent white;
+#projetos div {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 3ch;
+  border: 1px dashed red;
 }
 
-/* Add arrows to the right container (pointing left) */
-.right::before {
-    content: " ";
-    height: 0;
-    position: absolute;
-    top: 22px;
-    width: 0;
-    z-index: 1;
-    left: 30px;
-    border: medium solid white;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent;
+#projetos div article picture img {
+  width: 60vh;
+  height: 50vh;
 }
 
-/* Fix the circle for containers on the right side */
-.right::after {
-    left: -16px;
+/*
+* versão tablet
+*/
+@media screen and (max-width: 800px) {
+
 }
 
-/* The actual content */
-.content {
-    padding: 20px 30px;
-    background-color: white;
-    position: relative;
-    border-radius: 6px;
-}
+/*
+* versão mobile
+*/
+@media screen and (max-width: 480px) {
+  h1 {
+    font-size: 2.8em;
+  }
 
-/* Media queries - Responsive timeline on screens less than 600px wide */
-@media screen and (max-width: 600px) {
-  /* Place the timelime to the left */
-  .timeline::after {
-    left: 31px;
+  nav {
+    height: auto;
+    border-bottom: 0;
+  }
+
+  nav ul {
+    display: none;
+    height: auto;
   }
   
-  /* Full-width containers */
-  .container {
+  nav li {
     width: 100%;
-    padding-left: 70px;
-    padding-right: 25px;
+    float: left;
+    position: relative;
   }
   
-  /* Make sure that all arrows are pointing leftwards */
-  .container::before {
-    left: 60px;
-    border: medium solid white;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent;
-  }
-
-  /* Make sure all circles are at the same spot */
-  .left::after, .right::after {
-    left: 15px;
+  nav a {
+    text-align: left;
+    width: 100%;
+    text-indent: 25px;
+    background: #333;
+    border-bottom: 1px solid #555;
   }
   
-  /* Make all right containers behave like the left ones */
-  .right {
-    left: 0%;
+  nav a:hover {
+    background: #444;
+  }
+  
+  nav a#openup:after {
+    content: "|||";
+    transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    /* IE 9 */
+    -webkit-transform: rotate(-90deg);
+    /* Safari and Chrome */
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    position: absolute;
+    right: 5px;
+    top: 20px;
+  }
+  
+  nav a#openup {
+    display: block;
+    background-color: #333;
+    width: 100%;
+    position: relative;
+  }
+  
+  #projetos,
+  #projetos div,
+  #projetos div article{
+    display: block;
+  }
+  
+  #projetos div article{
+    margin-bottom: 3ch;
+  }
+  
+  footer{
+    height: 20vh;
+    flex-direction: column;        
   }
 }
+
+/*Alguns clears e fixers*/
+.cf:before, .cf:after {
+  content: "";
+  display: table;
+}
+
+.cf:after {
+  clear: both;
+}
+
+.cf {
+  zoom: 1;
+}
+
